[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secure-agent-core"
version = "0.1.0"
description = "Model-agnostic security layer for AI agents — prompt injection protection, PII redaction, and policy enforcement"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "lita-hiroto", email = "contact@aievid.com"}
]
keywords = ["ai", "security", "llm", "agent", "prompt-injection", "pii", "guardrails"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/lita-hiroto/secure-agent-core"
Documentation = "https://github.com/lita-hiroto/secure-agent-core#readme"
Issues = "https://github.com/lita-hiroto/secure-agent-core/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
