cat > pyproject.toml << 'EOF'
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-agent-core"
version = "2.0.0"
description = "Model-agnostic security layer for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Business Source License 1.1"}
authors = [
    {name = "Evid AI", email = "support@evidai.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "websockets>=11.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dashboard = [
    "httpx>=0.24.0",
    "websockets>=11.0",
]
sdk = [
    "httpx>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
all = [
    "httpx>=0.24.0",
    "websockets>=11.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/evidai/Openpic"
Documentation = "https://docs.openpic.ai"
Repository = "https://github.com/evidai/Openpic"
Issues = "https://github.com/evidai/Openpic/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
EOF
